# SimpleChat-DSDV-Routing

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  launch_3_nodes.sh  stop_all.sh  test_nat_traversal.sh
src/: main.cpp  message.cpp  message.h  networkmanager.cpp  networkmanager.h  simplechat.cpp  simplechat.h
tests/: CMakeLists.txt  tests.cpp
